# agentfit-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: fitter.rs  lib.rs  tokenizer.rs
tests/: test_fitter.rs
