[package]
name = "agentfit"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["MukundaKatta"]
description = "Fit messages to an LLM context window. Token-aware truncation with pluggable tokenizers and multiple strategies."
license = "MIT"
repository = "https://github.com/MukundaKatta/agentfit-rs"
homepage = "https://github.com/MukundaKatta/agentfit-rs"
documentation = "https://docs.rs/agentfit"
readme = "README.md"
keywords = ["llm", "anthropic", "openai", "context-window", "tokens"]
categories = ["text-processing", "api-bindings"]

[features]
default = []
# Accurate OpenAI/Anthropic-grade tokenization via tiktoken-rs.
tiktoken = ["dep:tiktoken-rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tiktoken-rs = { version = "0.7", optional = true }

[dev-dependencies]
serde_json = "1"
